minor spacing fix

--- a/frontend/src/pages/Resources/Resources.css
+++ b/frontend/src/pages/Resources/Resources.css
@@ -2,7 +2,7 @@
     background-color: #272727;
     min-height: 100vh;
 }
-.content {
+.resource-content {
     padding-top: 100px;
     padding-left: 20px;
     color: white;
